Ensure label doesn't wrap

--- a/client/components/filter-select-control/style.scss
+++ b/client/components/filter-select-control/style.scss
@@ -7,6 +7,7 @@
 		margin-bottom: 0;
 		color: $wp-gray-40;
 		margin-right: 0.2em;
+		white-space: nowrap;
 
 		&::after {
 			content: ':';
